--- a/vignettes/contributing_content.Rmd
+++ b/vignettes/contributing_content.Rmd
@@ -2,7 +2,7 @@
 title: "Contributing Content"
 author: "Tony Fujs"
 date: "`r Sys.Date()`"
-output: rmarkdown::github_document
+output: rmarkdown::html_vignette: keep_md: true
 vignette: >
   %\VignetteIndexEntry{Introduction to ddhconnect}
   %\VignetteEncoding{UTF-8}
