--- a/vignettes/contributing_content.Rmd
+++ b/vignettes/contributing_content.Rmd
@@ -17,12 +17,16 @@ With proper authorization, you can add and update datasets and resources to the 
 ___
 
 ## Terminology
-The World Bank Data Catalog is built using the DKAN platform. In line with DKAN terminology, the term "dataset" is used to refer to a node that has all the metadata for the data and the term "resource" is used refer to a node that has the data file, link to the data file or any supporting document. In the Data Catalog, every "dataset" is expected to have one or more "resources" attached to it.
+The World Bank Data Catalog is built using the DKAN platform. In line with DKAN terminology, the term "dataset" refers to a node that has the metadata for the data and the term "resource" refers to a node that has the data file, link to the data file or any supporting document. In the Data Catalog, every "dataset" is required to have one or more attached "resources".
 
 ___
 
 ## Setting Up Your Connection
-First, begin by setting up your account with the following `dkanr_setup` function to authenticate the user. Login information for access to the API's extended services can be obtained by contacting the World Bank's IT Services, provided you are authorized for these credentials.
+First, set up your connection and authenticate your credentials using `dkanr::dkanr_setup()`. You can contact the World Bank's IT Services to obtain login information to access the API's extended services, provided that you are authorized for these credentials. You can save your credentials as environment variables using `Sys.setenv()`.
+```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
+Sys.setenv(username = "YOUR USERNAME", password = "YOUR PASSWORD")
+```
+
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE}
 library(dkanr)
 library(ddhconnect)
@@ -36,7 +40,7 @@ dkanr_setup(
 ___
 
 ## Adding Content
-To add content to the Data Catalog, you need to add the metadata as a dataset node and the corresponding data files, links and supporting documentation as resources. Suppose we want to add a dataset with the following information to the Data Catalog and then attach a zip file containing the data as the resource. 
+To add content to the Data Catalog, first add the metadata as a dataset node and then add the corresponding data files, links and supporting documentation as resource nodes. Consider the case where we want to add a dataset about poverty maps with the following metadata and attach a zip file containing the data as a resource.
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 metadata = c("title" = "Test Poverty Map",
@@ -52,7 +56,7 @@ metadata = c("title" = "Test Poverty Map",
            "workflow_status" = "published")
 ```
 
-Some fields such as `field_topic` and `field_wbddh_data_class` take a controlled list of values as input. These values need to be mapped to their internal ids before they can be added to the Data Catalog. You can get a list of the fields that take a controlled list of values and the mapping from the controlled list of values to the corresponding ids using `get_lovs()`.
+Some of the above fields such as `field_topic` and `field_wbddh_data_class` take values from a list of controlled vocabulary. These values should be mapped to their internal ids before they can be added to the Data Catalog. Use `get_lovs()` to i) get the fields with controlled vocabulary and ii) map the controlled vocabulary values to their corresponding ids.
 
 ```{r}
 tid_mapping <- get_lovs()
@@ -65,16 +69,16 @@ You can get a list of all controlled vocabulary fields by getting the unique val
 lov_fields <- unique(tid_mapping$machine_name)
 ```
 
-To get the tids corresponding to the topics of the dataset, you can look for `"field_topic"`:
+To get the ids corresponding to the dataset topics, you can filter the dataframe for `"field_topic"`:
 
 ```{r}
 tid_mapping[tid_mapping$machine_name == "field_topic", c("machine_name", "list_value_name", "tid")]
 ```
 
-Using this, you can map the field_topic `"Poverty"` to its internal id `376`. Similarly, you can map the values for other fields taking a controlled vocabulary.
+From the above table, you can map the field_topic `"Poverty"` to its internal id `376`. Follow a similar procedure to map all the controlled vocabulary fields to their internal ids.
 
 ### Adding a new dataset
-To add a new dataset to the site, begin by formatting your metadata into a named vector with the field names and corresponding values. You can pass this named vector to `create_json_body()`, which formats the metadata in the required JSON format. You can refer to the the data-raw folder to see which fields are required for the different data types. 
+To add a new dataset to the Data Catalog, begin by formatting your metadata into a named vector with the field names and corresponding values. Pass this named vector to `create_json_body()`, to format the metadata in the required JSON format. You can refer to the the `data-raw` folder to see the required fields for the different data types. For example, for the 'geospatial' data type, you can find the required fields in `data-raw/gs_required_fields.csv`.
 
 ```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
 metadata = c("title" = "Test Poverty Map",
@@ -92,7 +96,7 @@ json_dataset <- create_json_body(values = metadata,
                                  node_type = "dataset")
 ```
 
-Using the formatted JSON, you can add the dataset to the Data Catalog using `create_dataset()`.
+Add the dataset to the Data Catalog by passing the formatted JSON to `create_dataset()`.
 ```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
 resp_dataset <- create_dataset(body = json_dataset)
 ```
@@ -120,8 +124,19 @@ If your resource is a local file, you can upload it to the Data Catalog using `a
 attach_file_to_resource(resource_nid = resp_resource$nid, file_path = "PATH TO YOUR FILE")
 ```
 
+If your resource is a link to an external page, you can add the link as part of the resource metadata.
+```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
+resource_metadata <-  c("title" = "Small Area Estimation of Poverty",
+                        "field_wbddh_data_class" = "358",
+                        "field_wbddh_resource_type" = "1192",
+                        "field_link_api" = "http://www.nsb.gov.bt/publication/files/pub9zo1561nu.pdf",
+                        "workflow_status" = "published")
+json_resource <- create_json_body(values = resource_metadata,
+                                  node_type = "resource")
+resp_resource <- create_resource(body = json_resource)
+```
 
-After the resource is added to the Data Catalog, it can be attached to your dataset using `attach_resources_to_dataset()`. Multiple resources can be attached to a dataset by passing a vector of resource nids.
+After the resource is added to the Data Catalog, attach it to your dataset using `attach_resources_to_dataset()`. You can attach multiple resources to a dataset by passing a vector of resource nids.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 attach_resources_to_dataset(dataset_nid = resp_dataset$nid, resource_nid = resp_resource$nid)
 ```
@@ -129,7 +144,7 @@ attach_resources_to_dataset(dataset_nid = resp_dataset$nid, resource_nid = resp_
 ___
 
 ## Updating Content
-To update content in the Data Catalog, you need to know the node ID of the dataset you wish you edit. To obtain the node id, you can search the catalog based on the title of the object. For example, to get the node id of the "Test Poverty Map" dataset that we just created, we could do a search using `search_catalog()`.
+To update content in the Data Catalog, you need to know the node ID of the dataset you wish you edit. To obtain the node id, you can search the catalog by the title of the dataset. For example, to get the node id of the "Test Poverty Map" dataset that we just created, you can perform a search using `search_catalog()`.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 search_results <- search_catalog(fields = c("nid", "title"),
                                  filters = c("title" = "Test Poverty Map"))
@@ -138,7 +153,7 @@ poverty_map_nid <- search_results[[1]]$nid
 
 ### Updating a dataset
 
-The process for updating a dataset is similar to the process of adding a new dataset. Create a named vector with the metadata fields to be updated and the new values. Format the metadata using `create_json_body()` and pass it to `update_dataset()` to update the dataset.
+The process of updating a dataset is similar to the process of adding a new dataset. Create a named vector with the updated metadata fields and the correspodning new values. Format the metadata using `create_json_body()` and pass it to `update_dataset()` to update the dataset.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 update_dataset_metadata <- c("field_wbddh_country" = "59",
                              "field_tags" = "1236",
@@ -146,11 +161,11 @@ update_dataset_metadata <- c("field_wbddh_country" = "59",
 update_dataset_json <- create_json_body(values = update_dataset_metadata, node_type = “dataset”)
 resp_update_dataset <- update_dataset(nid = poverty_map_nid, body = update_dataset_json)
 ```
-Note that you need to set the "workflow_status" to "published" everytime you update the node.
+Note that you need to set the "workflow_status" to "published" every time you update the node.
 
 ### Updating a resource
 
-You can use the same method to update the resource metadata. Get the resource node id, format the metadata using `create_json_body()` and update the resource using `update_resource()`.
+Use the same process as above to update the resource metadata. Get the resource node id, format the new metadata using `create_json_body()` and update the resource using `update_resource()`.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 update_resource_metadata <-  c("field_format" = "666",
                                "workflow_status" = "published")
@@ -158,7 +173,7 @@ update_resource_json <- create_json_body(values = update_resource_metadata, node
 resource_nid <- get_resource_nid(poverty_map_nid)
 resp_update_resource <- update_resource(nid = resource_nid, body = resource_json)
 ```
-Note that the functionality to search for resources is not available currently. So you can search for the dataset that the resource is attached to and get the node ids of the attached resources using `get_resource_nid()`.
+Note that the functionality to search for resources is currently unavailable. Instead, search for the dataset that the resource is attached to and get the resource node ids using `get_resource_nid()`. You can find an example in the above code snippet.
 
 ___
 
